# songbird

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.claude/: settings.json
app/: .gitignore  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
app/android/: README.md
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/example/songbird/: MainActivity.kt
app/ios/: README.md
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/bridge/: bridge.dart  bridge_frb.dart  bridge_stub.dart
app/lib/platform/: notifications.dart
app/lib/plugin_api/: plugin.dart
app/lib/presentation/: add_caldav_screen.dart  calendar_list_screen.dart  calendar_screen.dart  event_detail_screen.dart
app/lib/presentation/widgets/: agenda_list.dart  month_grid.dart
app/lib/state/: bridge_provider.dart  calendar_providers.dart  event_providers.dart
app/lib/theme/: app_colors.dart  app_motion.dart  app_radius.dart  app_theme.dart  app_typography.dart
app/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh  flutter_native_integration.env
app/rust_bridge/: README.md
app/rust_builder/: pubspec.yaml
app/rust_builder/android/: build.gradle  settings.gradle
app/rust_builder/android/src/main/: AndroidManifest.xml
app/rust_builder/ios/: songbird_core.podspec
core/: Cargo.toml  README.md
core/caldav-adapter/: Cargo.toml
core/caldav-adapter/src/: lib.rs
core/caldav-client/: Cargo.toml
core/caldav-client/src/: client.rs  lib.rs  types.rs
core/caldav-client/tests/: integration.rs
core/core/: Cargo.toml
core/core/src/: api.rs  frb_generated.rs  lib.rs
core/crypto/: Cargo.toml
core/crypto/src/: lib.rs
core/ical/src/: lib.rs  parse.rs  types.rs
core/ical/tests/: conformance.rs
core/recurrence/: Cargo.toml
core/recurrence/src/: expand.rs  lib.rs  types.rs
core/songbird-caldav-adapter/: Cargo.toml
core/songbird-caldav-adapter/src/: lib.rs
core/songbird-caldav-client/: Cargo.toml
core/songbird-caldav-client/src/: client.rs  lib.rs  xml.rs
core/songbird-core/: Cargo.toml
core/songbird-core/src/: api.rs  lib.rs
core/songbird-crypto/: Cargo.toml
core/songbird-crypto/src/: lib.rs
core/songbird-ical/: Cargo.toml
core/songbird-ical/src/: lib.rs  parse.rs  serialize.rs  types.rs
core/songbird-recurrence/: Cargo.toml
core/songbird-recurrence/src/: expand.rs  lib.rs  rule.rs  types.rs
core/songbird-recurrence/tests/: conformance.rs
core/songbird-storage/: Cargo.toml
core/songbird-storage/src/: lib.rs  model.rs
core/songbird-sync/: Cargo.toml
core/songbird-sync/src/: lib.rs
core/storage/: Cargo.toml
core/storage/migrations/: 0001_init.sql
core/storage/src/: lib.rs  migrate.rs  model.rs  repo.rs
core/sync/: Cargo.toml
core/sync/src/: lib.rs
core/tests/conformance/: README.md  edited_single_occurrence.ics  exdate_value_type_match.ics  explicit_tzid_import.ics  last_weekday_of_month.ics  minutely_recurrence.ics  weekday_repeat_rule.ics  zero_duration_event.ics
docs/adr/: 0000-template.md  0001-e2ee-via-local-caldav-adapter.md  0002-flutter-over-react-native-and-native.md  README.md
docs/api/: README.md
docs/design/: market-analysis.md  system-design.md
server/: Cargo.toml  README.md
server/deploy/: README.md  docker-compose.yml
server/songbird-server/: Cargo.toml
server/songbird-server/src/: push_relay.rs
sync-service/songbird-server/src/: main.rs
tests/: README.md
tests/caldav-servers/: docker-compose.yml
tests/caldav-servers/radicale/: config
