[workspace]
resolver = "2"
members = [
    "storage",
    "recurrence",
    "ical",
    "sync",
    "crypto",
    "caldav-client",
    "caldav-adapter",
    "core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/songbird-app/songbird"

[workspace.dependencies]
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono-tz = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = "1"
