[package]
name = "songbird-caldav-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CalDAV client (RFC 4791) — inbound sync to third-party servers"

[dependencies]
thiserror.workspace = true
tokio.workspace = true
songbird-ical = { path = "../ical" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
quick-xml = "0.31"

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
