[package]
name = "songbird-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Encryption primitives: per-calendar content keys, device key pairs, envelope encryption"

[dependencies]
thiserror.workspace = true
# Finalized per system-design.md §15.2: XChaCha20-Poly1305 — large nonce space removes
# nonce-reuse bookkeeping as a failure mode.
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
