[package]
name = "songbird-recurrence"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RFC 5545 recurrence rule parsing and expansion — pure logic, no internal crate dependencies"

[dependencies]
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
