[package]
name = "songbird-caldav-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local CalDAV server, outbound interop for E2EE calendars (Phase 2 / M6). See system-design.md §5.10 and §9.2."

[dependencies]
thiserror.workspace = true
tokio.workspace = true
songbird-ical = { path = "../songbird-ical" }
songbird-crypto = { path = "../songbird-crypto" }
axum = "0.7"

[dev-dependencies]
