[package]
name = "songbird-ical"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RFC 5545/5546 iCalendar parsing and serialization. Pure logic, no internal crate dependencies."

[dependencies]
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
