[package]
name = "songbird-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite-backed local store, the canonical on-device source of truth. See system-design.md §5.4."

[dependencies]
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
# Finalized per system-design.md §15.1: rusqlite, wrapped in spawn_blocking from the async
# API surface in songbird-core, rather than adopting sqlx.
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = "1"

[dev-dependencies]
