[package]
name = "songbird-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sync engine: change tracking and conflict resolution. See system-design.md §5.7 and §10."

[dependencies]
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
songbird-storage = { path = "../songbird-storage" }
songbird-ical = { path = "../songbird-ical" }
songbird-crypto = { path = "../songbird-crypto" }

[dev-dependencies]
