[package]
name = "songbird-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite-backed local store — the canonical on-device source of truth"

[dependencies]
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
rusqlite.workspace = true
rusqlite_migration.workspace = true

[dev-dependencies]
